--- a/index.html
+++ b/index.html
@@ -178,7 +178,18 @@
 	<body>
 	
 		<div id="sound"></div>
-	
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8089386626479235"
+     crossorigin="anonymous"></script>
+<!-- AD1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8089386626479235"
+     data-ad-slot="2684883838"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<div id="help">
 			<h2>Help</h2>
 			<table Align="center" Border="0" cellPadding="2" cellSpacing="0">
